ui-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bara-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bara-ui
  template:
    metadata:
      labels:
        app: bara-ui
    spec:
      containers:
      - name: bara-ui
        image: lionel411/bara-ui:82bd3c554339128b976964de6e475442c57fac0c
        ports:
        - containerPort: 80
