ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bara-ui
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: bara-ui
