api-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bara-api
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "bara-api-ip"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: managed-api-cert
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: bara-api
          servicePort: 80
